fix views overflowing to next line on desktop

--- a/public/sass/components/_dealPageContent.scss
+++ b/public/sass/components/_dealPageContent.scss
@@ -1093,7 +1093,6 @@
 .deal-views-dp {
   display: inline;
   font-size: 1.5rem;
-  width: 10rem;
 
   @include respond(phone) {
     font-size: 2rem;
