--- a/public/sass/css/style.css
+++ b/public/sass/css/style.css
@@ -3458,8 +3458,7 @@ figure {
 
 .deal-views-dp {
   display: inline;
-  font-size: 1.5rem;
-  width: 10rem; }
+  font-size: 1.5rem; }
   @media (max-width: 37.5em) {
     .deal-views-dp {
       font-size: 2rem;
